--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,11 @@ button {
 .action-text {
     font-size: 20px;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #f9faf8;
+    padding: 32px;
+}
